finished first recipe page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Odin Recipes</h1>
+    <h1><a href="recipes/apple-pie.html">Apple Pie</a></h1>
+    <img src="https://www.allrecipes.com/thmb/ucp4Fqo-fxKPqr7CIUhdPjLsKhU=/282x188/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/7285482-9639e456255347069f803932c0c46e12.jpg" alt="Apple-Pie">
+    <h1><a href="recipes/chicken-potpie.html">Chicken Pot Pie</a></h1>
+    <img src="https://www.allrecipes.com/thmb/3PXHTQTOivP5gZvOUiJh7vnmnyc=/282x188/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/26317-chicken-pot-pie-mfs-481-43f7b0890fd447da87780be8d245ec90.jpg" alt="Chicken-Pot-Pie">
+    <h1><a href="recipes/pot-roast.html">Pot Roast</a></h1>
+    <img src="https://www.allrecipes.com/thmb/1m1ovbXw6DpfSQR8_EKPbk2yFvo=/282x188/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/232756-pot-roast-ddmfs-1x1-0190-9107e821f8a8497a9275d63746e26ada.jpg" alt="pot-roast">
 </body>
 </html>
