--- a/recipes/apple-pie.html
+++ b/recipes/apple-pie.html
@@ -1,5 +1,13 @@
-<h1>Apple Pie</h1>
-<img src="https://www.allrecipes.com/thmb/ucp4Fqo-fxKPqr7CIUhdPjLsKhU=/282x188/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/7285482-9639e456255347069f803932c0c46e12.jpg">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Apple Pie Recipe</title>
+</head>
+<body>
+    <h1>Apple Pie</h1>
+<img src="https://www.allrecipes.com/thmb/o0y22q3z7ahTegqgWxZQD0Nvm5I=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/7285482-9639e456255347069f803932c0c46e12.jpg" alt="apple-pie">
 <h1>Ingredients</h1>
 <ul>
     <li>2/3 cup white sugar</li>
@@ -21,3 +29,5 @@
     <li>Place second pie crust on top of filling and flute the edges. Cut vents in top crust and brush with milk for a glazed appearance if desired.</li>
     <li>Bake at 425 degrees F (220 degrees C) for 40 to 50 minutes.</li>
 </ol>
+</body>
+</html>
